[metadata]
name = apx-rpmbuild
# version = see setup.py
author = Jesra Tikalsky
author_email = jtikalsky@hep.wisc.edu
keywords = packaging
# license = See Github
url = https://github.com/uwcms/APx-apx-rpmbuild
description = A helpful wrapper for rpmbuild automating package versioning from git.
long_description = A helpful wrapper for rpmbuild automating package versioning from git.

[options]
scripts = apx-rpmbuild
